--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>RevoU Project</title>
       <style>
         body {
-          background: yellow;
+          background: lightslategray;
           color: black
         }
       </style>
